--- a/InventoryManagement/tests/Domain.UnitTests/Domain.UnitTests.csproj
+++ b/InventoryManagement/tests/Domain.UnitTests/Domain.UnitTests.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\**" />
+    <EmbeddedResource Remove="Common\**" />
+    <None Remove="Common\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -26,8 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Entities\" />
-    <Folder Include="Common\Exceptions\" />
     <Folder Include="Entities\" />
     <Folder Include="Events\" />
     <Folder Include="ValueObjects\" />
