Uncomment inventory_api service configuration in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,28 +44,28 @@ services:
       - "1025:1025"
       - "8025:8025"
 
-  # inventory_api:
-  #   build:
-  #     context: ./InventoryManagement
-  #     dockerfile: src/WebAPI/Dockerfile
-  #   ports:
-  #     - "8080:8080"
-  #   environment:
-  #     - ASPNETCORE_ENVIRONMENT=Development
-  #     - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=inventory_db;Username=postgres;Password=postgres
-  #     - ExternalServices__AuditService__BaseUrl=http://audit-mockserver:1080
-  #     - ExternalServices__WmsService__BaseUrl=http://wms-mockserver:1080
-  #     - Email__SmtpHost=mailhog
-  #     - Email__SmtpPort=1025
-  #     - Email__FromEmail=noreply@inventory.com
-  #     - Email__FromName=Inventory Management System
-  #     - Email__EnableSsl=false
-  #   depends_on:
-  #     - postgres
-  #     - wms-mockserver
-  #     - audit-mockserver
-  #     - mailhog
-  #   restart: unless-stopped
+  inventory_api:
+    build:
+      context: ./InventoryManagement
+      dockerfile: src/WebAPI/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=inventory_db;Username=postgres;Password=postgres
+      - ExternalServices__AuditService__BaseUrl=http://audit-mockserver:1080
+      - ExternalServices__WmsService__BaseUrl=http://wms-mockserver:1080
+      - Email__SmtpHost=mailhog
+      - Email__SmtpPort=1025
+      - Email__FromEmail=noreply@inventory.com
+      - Email__FromName=Inventory Management System
+      - Email__EnableSsl=false
+    depends_on:
+      - postgres
+      - wms-mockserver
+      - audit-mockserver
+      - mailhog
+    restart: unless-stopped
 
 volumes:
   postgres_data:
