--- a/InventoryManagement/src/WebAPI/appsettings.json
+++ b/InventoryManagement/src/WebAPI/appsettings.json
@@ -4,8 +4,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Information",
-        "System": "Information"
+        "Microsoft": "Error",
+        "System": "Error"
       }
     },
     "WriteTo": [
